--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,14 @@
 /* ********************* Mini-Bar ******************* */
 #mini-bar{
 	width: 100%;
-	height: 35px;
-	background: #3db4d9;
+	height: 25px;
+	background: #ff3a3e;
 }
-#mini-bar-items{
-	font-weight: bold;
-	line-height: 35px;
+.mini-bar-items{
+	color: #ffffff;
+	line-height: 25px;
+	float: right;
+}
+#mini-bar-item-padding{
+	padding-left: 8px;
 }
