--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,8 @@
 /* ********************* Mini-Bar ******************* */
-#mini-bar{
+.mini-bar{
 	width: 100%;
 	height: 25px;
-	background: #ff3a3e;
+	background-color: #ff3a3e;
 }
 .mini-bar-items{
 	color: #ffffff;
@@ -12,3 +12,51 @@
 #mini-bar-item-padding{
 	padding-left: 8px;
 }
+
+/* ********************* Nav-Bar ******************* */
+.nav-bar-customization
+{
+	background-color: white !important;
+	color: black !important;
+}
+.btn-color{
+	background-color: #ff3a3e !important;
+	/*float: right !important;*/
+}
+.btn-bar-color{
+	background-color: #ffffff !important;
+}
+.nav-bar-item-color{
+	color: black !important;
+	padding-left: 4px;
+}
+.nav-bar-item-color-hover:hover{
+	background-color: #ff3a3e !important;
+	color: #ffffff !important;
+	border-radius: 4px;
+}
+.nav-bar-item-color-hover:focus{
+	background-color: #ff3a3e !important;
+	color: #ffffff !important;
+	border-radius: 4px;
+}
+.nav-bar-padding{
+	padding: 1px;
+}
+/* ********************* Footer ******************* */
+.copyright{
+	width: 100%;
+	background-color: #141414;
+	color: white;
+	font-weight: bold;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	font-size: 100%;
+	font-family: inherit;
+	display: block;
+}
+
+
+
+
